Mise à jour des forms + du plugin loader.